<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/chkSendIds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/send_ids" />

            <TextView
                android:id="@+id/lblID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/txtID"
                android:text="@string/id" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lblServerPort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:labelFor="@id/txtServer"
                    android:text="@string/server" />

                <TextView
                    android:id="@+id/lblPort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:labelFor="@id/txtPort"
                    android:text="@string/port" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtServer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="textUri"
                    android:minHeight="48dp"
                    android:text="" />

                <EditText
                    android:id="@+id/txtPort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:text=""/>
            </LinearLayout>

            <TextView
                android:id="@+id/lblLogFormat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/log_format" />

            <Spinner
                android:id="@+id/spinLogFormat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/log_format_array"
                android:minHeight="48dp"
                android:prompt="@string/lf_prompt" />

            <CheckBox
                android:id="@+id/chkUseFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/usefilter"
                android:visible="false" />

            <TextView
                android:id="@+id/lblFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:labelFor="@id/txtFilter"
                android:text="@string/filter" />

                <EditText
                    android:id="@+id/txtFilter"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:text="" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chkAutoStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/autostart"
                    android:visible="false" />

                <Button
                    android:id="@+id/grantPermissionBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:enabled="false"
                    android:text="@string/grant_read_logs" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="?android:attr/listDivider"/>

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?attr/dividerVertical"
                android:orientation="horizontal"
                android:showDividers="middle">

                <Button
                    android:id="@+id/activateServiceBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activate_service" />

                <Button
                    android:id="@+id/deactivateServiceBtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/deactivate_service" />
            </LinearLayout>
        </LinearLayout>
</ScrollView>
